# flint-gate

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.example.yaml  config.smoke.yaml  config.test.yaml  docker-compose.smoke.yml  docker-compose.test.yml  docker-compose.yml
.agents/skills/flint-gate-auth/: SKILL.md
.agents/skills/flint-gate-config/: SKILL.md
.agents/skills/flint-gate-routes/: SKILL.md
.claude-plugin/: marketplace.json
.claude/commands/: gateway-config.md  gateway-health.md
.claude/skills/flint-gate-config/: SKILL.md
.claude/skills/flint-gate-deploy/: SKILL.md
.github/workflows/: ci.yml  deploy-gateway.yml  e2e-smoke.yml  integration.yml  release.yml
.kbd-orchestrator/: constraints.md  current-waypoint.json  current-waypoint.md  memory-outbox.jsonl  position-reminder.txt  position.json  project.json
.kbd-orchestrator/evolution-briefs/: ai-agent-gateway-parity.md
.kbd-orchestrator/phases/admin-hardening-and-multi-replica-approval/: assessment.md  goals.md  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/admin-ux-polish-and-diff-view/: assessment.md  goals.md  hooks.log.jsonl  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/agent-approval-and-step-up-flows/: analysis.md  assessment.md  decision-log.md  execution.md  goals.md  hooks.log.jsonl  library-candidates.json  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/agent-authz-budget-rate-limiting/: assessment.md  goals.md  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/agent-authz-control-plane/: analysis.md  assessment.md  decision-log.md  execution.md  goals.md  hooks.log.jsonl  library-candidates.json  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/agent-gateway-budget-and-policy-operability/: analysis.md  assessment.md  decision-log.md  execution.md  goals.md  hooks.log.jsonl  library-candidates.json  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/agent-gateway-exposure-operability/: analysis.md  assessment.md  decision-log.md  execution.md  goals.md  hooks.log.jsonl  library-candidates.json  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/agent-gateway-hardening-and-exposure/: analysis.md  assessment.md  decision-log.md  execution.md  goals.md  hooks.log.jsonl  library-candidates.json  plan.md  prior-context.md  progress.json  reflection.md
.kbd-orchestrator/phases/agent-gateway-mcp-tool-governance/: analysis.md  assessment.md  decision-log.md  execution.md  goals.md  hooks.log.jsonl  library-candidates.json  plan.md  progress.json  reflection.md
.prometheus/: events.jsonl
crates/flint-gate/: Cargo.toml
crates/flint-gate-client/: Cargo.toml
crates/flint-gate-client/src/: client.rs  error.rs  lib.rs  stream.rs  types.rs
crates/flint-gate-client/tests/: integration.rs
crates/flint-gate-core/: Cargo.toml
crates/flint-gate-core/migrations/: 0001_initial_schema.sql  0002_alter_api_keys.sql  0003_pending_approvals.sql
crates/flint-gate-core/src/: lib.rs  metrics.rs
crates/flint-gate-core/src/admin/: auth.rs  mod.rs
crates/flint-gate-core/src/approval/: mod.rs  postgres.rs
crates/flint-gate-core/src/approval/durable/: mod.rs  postgres.rs
crates/flint-gate-core/src/auth/: api_key.rs  client_credentials.rs  http_body.rs  identity.rs  introspect.rs  jwks.rs  jwt_mint.rs  jwt_verify.rs  kratos.rs  mcp.rs  mcp_metadata.rs  mod.rs  oauth.rs  pkce.rs  token_exchange.rs
crates/flint-gate-core/src/authz/: bundle.rs  engine.rs  error.rs  mod.rs  schema.rs  sugar.rs  tool_authz.rs  validator.rs
crates/flint-gate-core/src/cache/: mod.rs
crates/flint-gate-core/src/config/: loader.rs  lookup.rs  template.rs  types.rs
crates/flint-gate-core/src/db/: mod.rs
crates/flint-gate-core/src/guardrail/: mod.rs
crates/flint-gate-core/src/middleware/: mod.rs  pipeline.rs
crates/flint-gate-core/src/proxy/: mod.rs  router.rs
crates/flint-gate-core/src/ratelimit/: governor_layer.rs  mod.rs  oauth_limit.rs
crates/flint-gate-core/src/stream/: a2ui.rs  ag_ui.rs  mod.rs  ndjson.rs  processor.rs  websocket.rs
crates/flint-gate-core/tests/: mcp_e2e.rs
crates/flint-gate/src/: main.rs
docs/: FLINT-KEYS.md  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
docs/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
docs/docs/: admin-api.md  cedar-policies.md  configuration.md  getting-started.md  intro.md  metrics.md  operations.md
examples/: README.md
examples/chat-completion-stream/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
examples/flutter-chat/: README.md  pubspec.yaml
examples/go-downstream/: README.md  go.mod  main.go
examples/nextjs-middleware/: README.md  middleware.ts  package.json  pnpm-lock.yaml  tsconfig.json
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  network-policy.yaml  secret.yaml  service-admin.yaml  service.yaml  shared-envoy-gateway.yaml
sdks/flutter/: README.md  analysis_options.yaml  pubspec.yaml
sdks/go/: README.md  client.go  client_test.go  doc.go  go.mod  integration_test.go  middleware.go  stream.go  stream_test.go  types.go  ws.go
sdks/typescript/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
src/: main.rs
src/admin/: mod.rs
src/auth/: identity.rs  jwt_mint.rs  jwt_verify.rs  kratos.rs  mod.rs
src/cache/: mod.rs
src/config/: loader.rs  lookup.rs  mod.rs  template.rs  types.rs
src/db/: mod.rs
src/middleware/: mod.rs  pipeline.rs
src/proxy/: mod.rs  router.rs
src/stream/: a2ui.rs  ag_ui.rs  mod.rs  ndjson.rs  processor.rs  websocket.rs
test/stub/: server.mjs
web/: .gitignore  Dockerfile.smoke  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
web/e2e/: README.md  approvals.spec.ts  oauth.spec.ts  policies.spec.ts  smoke.spec.ts
web/src/: App.tsx  index.css  main.tsx
(+562 files in other folders)
