[package]
name = "flint-gate"
version = "0.1.0"
edition = "2021"
authors = ["Travis James <travis@know-me.tools>"]
description = "AI-native auth proxy and API gateway — Flint brand by KnowMe, LLC"
license = "MIT"
repository = "https://github.com/Know-Me-Tools/flint-gate"

[[bin]]
name = "flint-gate"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"

# Web framework + HTTP
axum = { version = "0.8", features = ["ws", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
hyper = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }
http = "1"

# Upstream HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

# WebSocket upstream bridging (already in lockfile via axum ws)
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# Caching
moka = { version = "0.12", features = ["future"] }

# JWT
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Routing / pattern matching
regex = "1"

# File watching (config hot-reload)
notify = "6"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# IDs + timestamps
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Byte handling + streaming
bytes = "1"
futures = "0.3"
pin-project-lite = "0.2"

# Async trait objects
async-trait = "0.1"

# Concurrent collections
dashmap = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# Hashing (API key verification) + random key generation
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Redis L2 cache
redis = { version = "1", features = ["tokio-comp", "connection-manager"], optional = true }

[features]
default = ["redis-l2"]
redis-l2 = ["dep:redis"]

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
