[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Travis James <travis@know-me.tools>"]
license = "MIT"
repository = "https://github.com/Know-Me-Tools/flint-gate"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
