[package]
name = "flint-gate-client"
version = "0.1.0"
edition = "2021"
authors = ["Travis James <travis@know-me.tools>"]
description = "Rust client SDK for Flint Gate"
license = "MIT"
repository = "https://github.com/Know-Me-Tools/flint-gate"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
futures = "0.3"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
