[package]
name = "flint-gate-core"
version = "0.1.0"
edition = "2021"
authors = ["Travis James <travis@know-me.tools>"]
description = "Core library for Flint Gate — AI-native auth proxy and API gateway"
license = "MIT"
repository = "https://github.com/Know-Me-Tools/flint-gate"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
axum = { version = "0.8", features = ["ws", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
hyper = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }
http = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
moka = { version = "0.12", features = ["future"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
futures = "0.3"
pin-project-lite = "0.2"
async-trait = "0.1"
dashmap = "6"
thiserror = "2"
anyhow = "1"
sha2 = "0.10"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
base64 = "0.22"
bcrypt = "0.19"
url = "2"
hex = "0.4"
rand = "0.8"
redis = { version = "1", features = ["tokio-comp", "connection-manager"], optional = true }
governor = "0.10"
tower_governor = "0.8"
cedar-policy = "4"
arc-swap = "1"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
rust-embed = { version = "8", features = ["axum", "debug-embed"] }
mime_guess = "2"

[features]
default = ["redis-l2"]
redis-l2 = ["dep:redis"]

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"
